--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 API_KEY="94f5470380124db5156133c4aeb15812"
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://myuser:mypassword@postgres:5432/mydatabase"
 TEST_VARIABLE="testing123"
